<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.farhan.campussystem.Company.CompanyAddJob">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_AddJob_Role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/role" />

            <EditText
                android:id="@+id/et_AddJob_Type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/job_type" />

            <EditText
                android:id="@+id/et_AddJob_Experience_Level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/experience_level" />

            <EditText
                android:id="@+id/et_AddJob_Salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/salary"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_AddJob_Company_Size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/company_size" />

            <EditText
                android:id="@+id/et_AddJob_Company_Type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/company_type" />

            <EditText
                android:id="@+id/et_AddJob_Industry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/industry" />

            <EditText
                android:id="@+id/et_AddJob_Job_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/job_description" />

            <Button
                android:id="@+id/btn_AddJob_Post_Job"
                style="@style/customButtonColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="25dp"
                android:text="@string/post_job"
                android:textAllCaps="false" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
