<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/et_SignUp_Admin_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/admin_name" />

            <EditText
                android:id="@+id/et_SignUp_Admin_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_SignUp_Admin_Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_SignUp_Admin"
                style="@style/customButtonColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="25dp"
                android:text="@string/sign_up"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
