<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/main_Root_ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/role_Tv"
                android:textColor="#4e4e4e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/company_JobDetail_Role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/job_type_Tv"
                android:textColor="#4e4e4e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/company_JobDetail_Type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/salary_Tv"
                android:textColor="#4e4e4e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/company_JobDetail_Salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/experience_Tv"
                android:textColor="#4e4e4e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/company_JobDetail_Experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/company_type_Tv"
                android:textColor="#4e4e4e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/company_JobDetail_CompanyType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/company_size_Tv"
                android:textColor="#4e4e4e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/company_JobDetail_CompanySize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/industry_Tv"
                android:textColor="#4e4e4e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/company_JobDetail_Industry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/job_description_Tv"
                android:textColor="#4e4e4e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/company_JobDetail_JobDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#b9b9b9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/student_s_list_who_applied_for_the_job"
                android:textColor="#666666"/>

            <com.example.farhan.campussystem.Others.NonScrollListView
                android:id="@+id/mListViewStudentApplied"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/student_Applied_Empty_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/there_are_no_student_who_applied_for_this_job"
                android:textColor="#ff6767"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
