<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar_Company_Detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/company_Detail_Image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/about_us"
                android:textColor="#4e4e4e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/company_Detail_AboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="20dp"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/contact"
                android:textColor="#4e4e4e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/company_Detail_Contact"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="2dp"
                android:paddingStart="20dp"
                android:textColorLink="#00695C" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="#4e4e4e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/company_Detail_Email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autoLink="email"
                android:paddingEnd="2dp"
                android:paddingStart="20dp"
                android:textColorLink="#00695C"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/location"
                android:textColor="#4e4e4e"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/company_Detail_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="map"
                android:paddingEnd="20dp"
                android:paddingStart="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="13dp"
                android:background="#a3a3a3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/available_jobs"
                android:textColor="#505050"/>

            <com.example.farhan.campussystem.Others.NonScrollListView
                android:id="@+id/mListViewJobAvailable_CompanyDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/job_Available_Empty_View_CompanyDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/no_job_available"
                android:textColor="#ff8f8f"
                android:textSize="14sp"
                android:visibility="gone"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
